# DualGPUOptimizer

./: -files -u  .cursorrules  .pre-commit-config.yaml  0.13.0  1.24.0  1.7.2  EMPTY_GUI_FIX.md  FIXES_SUMMARY.md  FRENCH_LEGAL_LLM.md  Feedtheappwithwebcontent.txt  LICENSE  LLMfrenchlegaltrainingreadme.md  Makefile  PACKAGING.md  README.md  bootstrap.py  bugfix_summary.md  build.py  build_and_run.bat  build_and_verify.ps1  build_custom_hook.py  build_exe.py  build_executable.py  build_modern_app.py  build_no_hook.py  build_simple.py  build_simple_direct.py  build_standalone.bat  check_deps.py  check_theme_files.py  check_torch.py  code_quality.md  code_quality_report.md  create_icon.py  dependencies.md  direct_build.py  direct_launch.py  fix_code_style.py  fix_module_paths.py  fix_package.py  (+92 more)
.cursor/: mcp.json
.cursor/rules/: data-flow-architecture.mdc  gpu-optimization-algorithms.mdc  model-execution-flow.mdc  resource-monitoring-system.mdc
.giga/: specifications.json
.github/workflows/: ci.yml  tests.yml
.trunk/: trunk.yaml
.venv-gui/: pyvenv.cfg
.venv-gui-311/: pyvenv.cfg
.venv-gui-311/Scripts/: activate  activate.bat
.venv-gui-new/: pyvenv.cfg
.venv-gui-new/Scripts/: activate  activate.bat
.venv-gui-py311/: pyvenv.cfg
.venv-gui-py311/Scripts/: activate  activate.bat
.venv_py311/: pyvenv.cfg
.venv_py311/Scripts/: Activate.ps1  activate  activate.bat
custom_hooks/: hook-prometheus_client.py  hook-torch.py
docs/: DEV_SETUP.md  MODEL_PROFILES.md  QUICK_START.md  README.md  TODO.md  dependency_management.md  refactored_architecture.md
dual_gpu_optimizer/: HARDWARE_SETUP.md  README.md  pyproject.toml  requirements.txt  setup.py  test_constants.py  test_direct.py  test_direct2.py  test_simple.py
dual_gpu_optimizer/.github/workflows/: ci.yml
dual_gpu_optimizer/dualgpuopt/: __init__.py  __main__.py  configio.py  ctx_size.py  gpu_info.py  gui.py  layer_balance.py  log.py  logconfig.py  metrics.py  mpolicy.py  optimizer.py  runner.py  telemetry.py  tray.py
dual_gpu_optimizer/dualgpuopt/batch/: __init__.py  heuristics.py  smart_batch.py
dual_gpu_optimizer/dualgpuopt/commands/: __init__.py  command_base.py  gpu_commands.py
dual_gpu_optimizer/dualgpuopt/gui/: __init__.py  app.py  constants.py  dashboard.py  event_dashboard.py  launcher.py  optimizer.py  optimizer_tab.py  settings.py  theme.py
dual_gpu_optimizer/dualgpuopt/gui/settings/: README.md  __init__.py  appearance.py  application_settings.py  compat.py  overclocking.py  settings_tab.py
dual_gpu_optimizer/dualgpuopt/presets/: mixtral.json
dual_gpu_optimizer/dualgpuopt/services/: README.md  __init__.py  config_service.py  error_service.py  event_bus.py  event_service.py  state_service.py
dual_gpu_optimizer/tests/: context.py  run_settings_tests.py  test_config.py  test_imports.py  test_optimizer.py  test_split.py
dual_gpu_optimizer/tests/gui/: __init__.py  test_appearance_frame.py  test_application_settings_frame.py  test_overclocking_frame.py  test_settings_tab.py
dualgpuopt/: Makefile  README_LEGAL_LLM.md  REFACTORING.md  TODO_memory_monitor_refactor.md  __init__.py  __main__.py  chat_tab.py  config_system.py  configio.py  ctx_size.py  dependency_manager.py  direct_launcher.py  error_handler.py  gpu_info.py  gpu_metrics.py  gui.py  integration.py  layer_balance.py  memory_monitor.py  model_profiles.py  mpolicy.py  optimizer.py  personas.py  requirements_legal.txt  run_legal_llm.bat  run_legal_llm.sh  runner.py  sessions.py  telemetry.py  telemetry_history.py  update_checker.py  vram_reset.py
dualgpuopt/batch/: __init__.py  smart_batch.py
dualgpuopt/commands/: __init__.py  gpu_commands.py
dualgpuopt/datasets/: qc_tokeniser.py
dualgpuopt/engine/: backend.py  benchmark.py  metrics.py  pool.py
dualgpuopt/error_handler/: README.md  __init__.py  base.py  compat.py  decorators.py  handler.py  logging.py  recovery.py  ui.py
dualgpuopt/eval/: lexglue_fr.py  test_lexglue_fr.py
dualgpuopt/gpu/: README.md  __init__.py  common.py  compat.py  info.py  mock.py  monitor.py
dualgpuopt/gui/: __init__.py  cache_monitor.py  constants.py  dashboard.py  launcher.py  launcher_compat.py  launcher_fixed.py  main_app.py  memory_profile_tab.py  modern_ui.py  optimizer_tab.py  theme.py  theme_observer.py  theme_selector.py  theme_tester.py  themed_widgets.py
dualgpuopt/ingest/: chunk_jsonl.py  clean_html.py
dualgpuopt/memory/: README.md  __init__.py  __main__.py  alerts.py  cache_benchmark.py  cache_demo.py  cache_utils.py  compat.py  cpu_analyzer.py  metrics.py  monitor.py  predictor.py  profiler.py  recovery.py
dualgpuopt/model/: __init__.py  hf_client.py  quantise.py  vram_fit.py
dualgpuopt/qt/: __init__.py  app_window.py  cache_monitor.py  dashboard_tab.py  launcher_tab.py  main.py  memory_tab.py  model_manager.py  optimizer_tab.py  settings_tab.py  shared_constants.py  system_tray.py  training_tab.py
dualgpuopt/qtgui/: __init__.py  main.py  telethread.py  widgets.py
dualgpuopt/rag/: build_faiss.py  retrieve.py
dualgpuopt/scripts/: train_qlora.py
dualgpuopt/serve/: legal_api.py
dualgpuopt/services/: __init__.py  alerts.py  config_service.py  event_bus.py  event_bus_cpu.py  event_service.py  events.py  presets.py  resource_manager.py  telemetry.py
dualgpuopt/telemetry/: __init__.py  sample.py
examples/: telemetry_chart_example.py
hooks/: hook-dualgpuopt.gui.py  hook-torch.py  hook-torch.py.disabled  hook-torch_safe.py  hook-torch_safe.py.orig  rthook-cuda_path.py  rthook-gui-constants.py
robofix/: __init__.py  core.py  runner.py
test/: README.md  conftest.py
tests/: conftest.py  requirements-test.txt  run_theme_tester.py  test_api.py  test_backend_flags.py  test_bundle.py  test_config.py  test_dependency_manager.py  test_engine_pool.py  test_error_handler.py  test_fit_plan.py  test_gpu_module.py  test_gpu_simple.py  test_hf_download_checksum.py  test_launcher_module.py  test_memory_module.py  test_retriever.py  test_settings_module.py  test_telemetry.py  test_telemetry_alerts.py  test_telemetry_history.py  test_theme.py  test_theme_module.py  test_vram_fit.py
(+70 files in other folders)
