[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dual-gpu-optimizer"
version = "0.2.0"
requires-python = ">=3.12"
description = "Tkinter GUI that auto‑optimises dual‑GPU LLM setups"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Your Name"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
  "pynvml>=11.5.0",
  "pystray>=0.19.0",
  "pillow>=10.3.0",
  "tomli-w>=1.0.0",
  "typer>=0.9.0",
  "colorama>=0.4.6",
  "rich>=13.7.0",
  "psutil>=5.9.0",
  "ttkthemes>=3.2.2",
  "ttkwidgets>=0.13.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black>=24.2.0",
    "ruff>=0.2.2",
]
ml = [
    "torch>=2.3.0",
    "prometheus-client>=0.19.0"
]

[project.scripts]
dualgpuopt = "dualgpuopt.__main__:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/dual-gpu-optimizer"
"Bug Tracker" = "https://github.com/yourusername/dual-gpu-optimizer/issues"

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F"]
line-length = 88
